--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
    <div class="kutu">
-    <a href="index2.html"><img src="img/target.png" alt="" class="img-kutu"></a>
+    <a href="hakkinda.html"><img src="img/target.png" alt="" class="img-kutu"></a>
     <h2>Kerim Can Sırakaya</h2>
     <br>
     <h3>Ufak yaşam hikayemi anlatacağım...</h3>
